some bug fixes while login in and fixed the visibility of hamburger menu on mobile devices

--- a/client/src/Styles/TopNavBar.css
+++ b/client/src/Styles/TopNavBar.css
@@ -16,7 +16,7 @@
     background-color: white;
     position: absolute;
     width: 150px;
-    z-index: 1;
+    z-index: 2;
     right: 0%;
     border: 3px white solid;
     border-radius: 5px;
